Fix overflow problem on sidebar and main content

--- a/www/src/scss/_globals.scss
+++ b/www/src/scss/_globals.scss
@@ -53,6 +53,11 @@ table {
 
 // Global after resets :
 
+html {
+	height: 100%;
+}
+
 body {
+	height: 100%;
 	background: $main-bg-color;
 }
