--- a/www/src/scss/components/_card.scss
+++ b/www/src/scss/components/_card.scss
@@ -3,6 +3,6 @@
     border-radius: 8px;
     border-width: 1px;
     border-color: $card-border;
-    padding: 0.75rem 1rem;
     box-shadow: 0px 4px 4px 0px #40000000;
+    
 }
